--- a/formacion.html
+++ b/formacion.html
@@ -11,22 +11,57 @@
         <div id="Menu">
             <ul>
                 <li><a href="index.html">Datos Personales</a></li>
-                <li><a href="#" class="activo">Formacion</a></li>
-                <li><a href="#contact">Publicaciones</a></li>
-                <li><a href="#about">Datos de Interes</a></li>
+                <li><a href="#" class="activo">Formación</a></li>
+                <li><a href="#">Experiencia</a></li>
+                <li><a href="Publicaciones.html">Publicaciones</a></li>
+                <li><a href="#about">Datos de Interés</a></li>
             </ul>
         </div>
     </header>
     <div id="formacion">
         <h2>Formacion Academica</h2>
+        <div id="superior">
+            <table border="1" class="formacion">
+                <tr>
+                    <td class="fecha">
+                        <p>Actualmente...</p>
+                    </td>
+                    <td>
+                        <h3>F.P Grado Superior ASIR </h3>
+                        <small>Administración de Sistemas Informáticos en Red</small>
+                        <p id="Bosco">
+                            <a href="http://www.centrodonbosco.es/web/">Salesianos Centro Don Bosco</a>
+                            <a href="https://goo.gl/maps/rzYEtfiumaL2">(Pasaje Don Bosco 1, Villamuriel)</a>
+                        </p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div id="medio">
+            <table border="1" class="formacion">
+                <tr>
+                    <td class="fecha">
+                        <p>2014/2017</p>
+                    </td>
+                    <td>
+                        <h3>F.P Grado Medio SMR </h3>
+                        <small>Técnico en Sistemas Microinformáticos y Redes</small>
+                        <p id="Camino">
+                            <a href="http://cifpcaminodelamiranda.centros.educa.jcyl.es/sitio/">CIFP Camino de la Miranda</a>
+                            <a href="https://goo.gl/maps/X7QPGbyCmL72">(C/ Camino de la Miranda 19, Palencia)</a>
+                        </p>
+                    </td>
+                </tr>
+            </table>
+        </div>
         <div id="ESO">
-            <table border="1">
+            <table border="1" class="formacion">
                 <tr>
                     <td class="fecha">
                         <p>2010/2014</p>
                     </td>
                     <td>
-                        <h3>Educacion Secundaria Obligatoria</h3>
+                        <h3>Educación Secundaria Obligatoria</h3>
                         <p id="lasalle">
                             <a href="https://lasallepalencia.sallenet.org/">La Salle Palencia</a>
                             <a href="https://goo.gl/maps/j4ak7V2PnNH2">(C/ San Bernardo 11, Palencia)</a>
@@ -35,14 +70,8 @@
                 </tr>
             </table>
         </div>
-        <div id="medio">
-            <table border="1">
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-        </div>
+
+
     </div>
 </body>
 </html>
