--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div id="Menu">
         <ul>
             <li><a href="#" class="activo">Datos Personales</a></li>
-            <li><a href="formacion.html">Formacion</a></li>
-            <li><a href="#contact">Publicaciones</a></li>
-            <li><a href="#about">Datos de Interes</a></li>
+            <li><a href="formacion.html">Formación</a></li>
+            <li><a href="#">Experiencia</a></li>
+            <li><a href="Publicaciones.html">Publicaciones</a></li>
+            <li><a href="#about">Datos de Interés</a></li>
         </ul>
     </div>
 </header>
@@ -22,7 +23,7 @@
         <tr>
             <td>
                 <div id="foto">
-                    <img src="img/foto.jpg" alt="Yo">
+                    <img src="img/foto.jpg" alt="Yo" id="yo">
                 </div>
             </td>
             <td id="info">
