--- a/experiencia.html
+++ b/experiencia.html
@@ -10,37 +10,29 @@
     <h1>Curriculum Vitae</h1>
     <div id="Menu">
         <ul>
-            <li><a href="#" class="activo">Datos Personales</a></li>
+            <li><a href="index.html">Datos Personales</a></li>
             <li><a href="formacion.html">Formación</a></li>
-            <li><a href="experiencia.html">Experiencia</a></li>
+            <li><a href="#" class="activo">Experiencia</a></li>
             <li><a href="Publicaciones.html">Publicaciones</a></li>
             <li><a href="#about">Datos de Interés</a></li>
         </ul>
     </div>
 </header>
-<div id="personal">
-    <table>
-        <tr>
-            <td>
-                <div id="foto">
-                    <img src="img/foto.jpg" alt="Yo" id="yo">
-                </div>
-            </td>
-            <td id="info">
-                <h2>Álvaro Gutiérrez Rebollo</h2>
-                <p id="fecha"><strong>Fecha de Nacimiento</strong>: 23/11/1998</p>
-                <a href="https://goo.gl/maps/GuJ2vhxsLiE2"><p id="direccion"><strong>Dirección</strong>: C/ La Cestilla Nº2 3º Izq</p></a>
-                <a href="mailto:galvaro189@gmail.com"><p id="correo"><strong>Correo</strong>: galvaro189@gmail.com</p></a>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" id="informacion">
-                <p id="telefono"><strong>Telefono</strong>: +34 620 12 69 24</p>
-                <p id="dni"><strong>NIF</strong>: 71958433N</p>
-                <p id="nacionalidad"><strong>Nacionalidad</strong>: Española</p>
-            </td>
-        </tr>
-    </table>
+<div id="experiencia">
+    <a href="http://www.asicoinformatica.com/" id="asicoinf">
+    <div id="asico">
+        <h2>Practicas</h2>
+        <h3>Grado medio de Sistemas Microinformáticos y Redes</h3>
+        <h3>ASICO</h3>
+        <p>2017</p>
+    </div>
+    </a>
+    <div id="entrenador">
+        <h2>Entrenador</h2>
+        <h3>Equipo de Voleibol Infantil Femenino Federado</h3>
+        <h3>Club de Voleibol Palencia</h3>
+        <p>2017/2018</p>
+    </div>
 </div>
 <div id="contacto">
     <form>
