--- a/Publicaciones.html
+++ b/Publicaciones.html
@@ -9,12 +9,12 @@
 <header>
     <h1>Curriculum Vitae</h1>
     <div id="Menu">
-        <ul>
-            <li><a href="index.html">Datos Personales</a></li>
-            <li><a href="formacion.html">Formación</a></li>
-            <li><a href="experiencia.html">Experiencia</a></li>
-            <li><a href="#" class="activo">Publicaciones</a></li>
-            <li><a href="#about">Datos de Interés</a></li>
+        <ul class="desordenada">
+            <li class="menu"><a href="index.html">Datos Personales</a></li>
+            <li class="menu"><a href="formacion.html">Formación</a></li>
+            <li class="menu"><a href="experiencia.html" >Experiencia</a></li>
+            <li class="menu"><a href="Publicaciones.html" class="activo">Publicaciones</a></li>
+            <li class="menu"><a href="interes.html">Datos de Interés</a></li>
         </ul>
     </div>
 </header>
